git link change

--- a/templates/base.html
+++ b/templates/base.html
@@ -153,7 +153,7 @@
             <p>&copy; 2025 SWAPLY. All rights reserved.</p>
             <p class="mt-2 text-sm">Concept by: Yashika, Sakshi, Divya, Rubhi, Khushi</p>
             <p class="text-sm">Design & Development by: Yash Khandelwal</p>
-            <p class="text-sm">GitHub: <a href="https://github.com/dot-codr" class="text-theme-light hover:text-theme-primary transition duration-300">https://github.com/dot-codr</a></p>
+            <p class="text-sm">GitHub: <a href="https://github.com/dot-codr" class="text-theme-light hover:text-theme-primary transition duration-300">https://github.com/YashKh-09</a></p>
         </div>
     </div>
 </footer>
