--- a/templates/cart.html
+++ b/templates/cart.html
@@ -3,7 +3,7 @@
 {% block title %}Shopping Cart - SWAPLY{% endblock %}
 
 {% block content %}
-<div class="max-w-4xl mx-auto px-4 py-8">
+<div class="max-w-4xl check mx-auto px-4 py-8">
     <h1 class="text-3xl font-bold text-theme-text mb-2">Shopping Cart</h1>
     
     <div id="cartContent">
